[gd_scene load_steps=20 format=3 uid="uid://c6eounl1wmnfu"]

[ext_resource type="Script" path="res://player/player.gd" id="1_bjr5u"]
[ext_resource type="Script" path="res://components/states/state_machine.gd" id="2_hcc0c"]
[ext_resource type="Script" path="res://components/health/health.gd" id="2_jb453"]
[ext_resource type="Script" path="res://player/states/idle.gd" id="3_tnhvb"]
[ext_resource type="Script" path="res://player/states/move.gd" id="4_puc68"]
[ext_resource type="Texture2D" uid="uid://8jc7c47l6pc7" path="res://assets/textures/small-circle.png" id="5_e7bnn"]
[ext_resource type="PackedScene" uid="uid://dihwftj02yegc" path="res://components/health_indicator/health_indicator.tscn" id="6_qq22e"]
[ext_resource type="PackedScene" uid="uid://dvvktbgt1ayca" path="res://components/hurtbox/hurtbox.tscn" id="8_7ix7h"]
[ext_resource type="PackedScene" uid="uid://b1lcu4cgm3hjd" path="res://components/weapon/weapon_handler.tscn" id="9_4re1e"]
[ext_resource type="Script" path="res://components/weapon/collision_data/collision_data.gd" id="10_cwhxb"]
[ext_resource type="Script" path="res://components/weapon/weapon.gd" id="11_nmagf"]
[ext_resource type="Resource" uid="uid://blq3p3i3itxx0" path="res://player/weapons/starter.tres" id="12_rlha0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vqc0a"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_2go1a"]
radius = 6.0

[sub_resource type="Curve" id="Curve_8uxni"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_f4fjb"]
curve = SubResource("Curve_8uxni")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6yhwd"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
tangential_accel_min = -10.0
tangential_accel_max = 10.0
scale_min = 0.25
scale_max = 0.5
scale_curve = SubResource("CurveTexture_f4fjb")

[sub_resource type="CircleShape2D" id="CircleShape2D_5mix8"]
radius = 5.0

[sub_resource type="Resource" id="Resource_aamsx"]
script = ExtResource("10_cwhxb")
collision_layer = 16
collision_mask = 8

[node name="Player" type="RigidBody2D" node_paths=PackedStringArray("coll_shape", "hurt_coll_shape", "health", "health_indicator", "trail", "camera_lean", "weapon_handler")]
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_vqc0a")
gravity_scale = 0.0
linear_damp_mode = 1
linear_damp = 2.5
script = ExtResource("1_bjr5u")
camera_lean_amount = 0.333
coll_shape = NodePath("CollisionShape2D")
hurt_coll_shape = NodePath("Hurtbox/CollisionShape2D")
health = NodePath("Health")
health_indicator = NodePath("HealthIndicator")
trail = NodePath("Trail")
camera_lean = NodePath("CameraLean")
weapon_handler = NodePath("WeaponHandler")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_jb453")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_hcc0c")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_tnhvb")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("4_puc68")

[node name="HealthIndicator" parent="." instance=ExtResource("6_qq22e")]
entity_name = "YOU"
radius = 16.0
name_radius = 8.0
outline_color = Color(1, 1, 1, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2go1a")

[node name="Trail" type="GPUParticles2D" parent="."]
z_index = -1
amount = 15
process_material = SubResource("ParticleProcessMaterial_6yhwd")
texture = ExtResource("5_e7bnn")

[node name="Hurtbox" parent="." instance=ExtResource("8_7ix7h")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_5mix8")

[node name="CameraLean" type="Marker2D" parent="."]

[node name="WeaponHandler" parent="." instance=ExtResource("9_4re1e")]
collision_data = SubResource("Resource_aamsx")
weapons = Array[ExtResource("11_nmagf")]([ExtResource("12_rlha0")])

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="knocked_back" from="Hurtbox" to="." method="_on_hurtbox_knocked_back"]
